# mcgill-robotics-intro

./: .gitignore  README.md
section-01-getting-started/catkin_ws/src/control/: CMakeLists.txt  controller.py  package.xml
section-01-getting-started/catkin_ws/src/control/msg/: Effort.msg
section-01-getting-started/catkin_ws/src/propulsion/: CMakeLists.txt  package.xml
section-01-getting-started/catkin_ws/src/propulsion/motors/: motors.ino
section-01-getting-started/catkin_ws/src/state-estimation/: CMakeLists.txt  package.xml
section-01-getting-started/catkin_ws/src/state-estimation/sonar/: sonar.ino
